get tests passing
Signed-off-by: Jason Frame <jason.frame@consensys.net>